# QtTemplateProject

./: .gitignore  README.md
Docs/: 0.Prerequisite.md  1.HowToBuild.md  README.md
Projects/: CMakeLists.txt
Projects/ColorBar/: CMakeLists.txt  README.md  app.cpp
Projects/ColorBar/ui/: ColorBarDialog.cpp  ColorBarDialog.h
Projects/CustomEvent/: CMakeLists.txt  README.md
Projects/CustomEvent/event/: MessageEvent.cpp  MessageEvent.h
Projects/HelloQT/: README.md  helloQT.cpp
Projects/Project1/: CMakeLists.txt  main.cpp
